Restrict v1 conditions to top-level field access
Field conditions (bare-key and $field) may narrow into a subject's
field exactly once - a field's own Condition can no longer itself be
another field condition. Nested field access (e.g. subject.author.name)
is out of scope for v1 and reserved for a future version.

Comparison, collection, string, logical, and custom operators are
unaffected: they still apply freely to a field's own value. A
second-level field condition now evaluates to false and produces the
usual diagnostic, matching how other malformed condition shapes are
handled.

Updates SPEC_V1-0-0.md, both the JS and Java implementations, and the
v1 conformance fixtures. No spec version bump, since KeyCard is
pre-alpha.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PYLbpnA9xPwPDQGiuTEmei